--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+.gitignore
 .idea
 *.iws
 *.iml
@@ -23,6 +24,7 @@ logs/
 .idea/
 .mvn/
 */test/
+node_modules/
 ##忽略这些后缀的文件
 *.log
 *.properties
