--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
-    "axios": "^0.19.0",
-    "vue-axios": "^2.1.5"
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.9.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "deepmerge": "^4.2.2",
+    "fibers": "^4.0.2",
+    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
