--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-aplayer": "^1.6.1",
     "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.9.1",
