--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
+    "vue-snowf": "0.0.2",
     "vuetify": "^2.1.0",
     "wangeditor": "^3.1.1"
   },
